<resources>
    <string name="ten_app">Fast Event</string>
    <string name="app_name">QuetMa</string>
    <string name="title_activity_login">Login</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="username">Username</string>
    <string name="passwordHint">Password</string>
    <string name="btnDangNhap">Đăng Nhập</string>
    <string name="desLogo">LogoFastEven</string>
    <string name="txtChao">Chào các cộng tác viên</string>
    <string name="desNen">NenLogin</string>
    <string name="txtChucNang">Trang Chủ</string>
</resources>