<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"

    android:layout_height="match_parent"
    tools:context=".Login"
    >

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        app:srcCompat="@drawable/hero_area"
        android:contentDescription="@string/desNen" />
    <io.alterac.blurkit.BlurLayout
        android:id="@+id/blurLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:blk_blurRadius="3"
        app:blk_downscaleFactor="0.12"
        app:blk_fps="0"
        android:layout_centerInParent="true"/>


    <EditText
        android:id="@+id/username"
        android:hint="@string/username"
        android:layout_width="313dp"
        android:layout_height="42dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:textColorHint="@color/gray"
        android:background="@drawable/input_field"
        android:drawableStart="@drawable/ic_baseline_email_24"
        android:drawablePadding="5dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.341"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/password"
        android:layout_width="313dp"
        android:layout_height="42dp"
        android:layout_marginTop="28dp"
        android:background="@drawable/input_field"
        android:ems="10"
        android:drawableStart="@drawable/ic_baseline_lock_24"
        android:drawablePadding="5dp"
        android:hint="@string/passwordHint"
        android:inputType="textPassword"
        android:textColorHint="@color/gray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/username"
        android:importantForAutofill="no" />

    <Button
        android:id="@+id/dangnhap"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="49sp"
        android:layout_marginEnd="49sp"
        android:layout_marginTop="28dp"
        android:background="@drawable/btnlogin"
        android:text="@string/btnDangNhap"
        android:textAllCaps="false"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.178"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:fontFamily="@font/coiny"
        android:textSize="20sp"
        android:text="@string/txtChao"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/username"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="353dp"
        android:layout_height="123dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/textView3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo_dark"
        android:contentDescription="@string/desLogo" />


</androidx.constraintlayout.widget.ConstraintLayout>